[package]
name = "day_2_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "shape"
path = "src/shape/bin/main.rs"

[[bin]]
name = "url_matcher"
path = "src/url_matcher/bin/main.rs"

[[bin]]
name = "gui_library"
path = "src/gui_library/bin/main.rs"

[[bin]]
name = "polygon"
path = "src/polygon/bin/main.rs"
