[package]
name = "day_2_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "rustls-tls"] }
scraper = "0.17.1"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }

[[bin]]
name = "shape"
path = "src/shape/bin/main.rs"

[[bin]]
name = "url_matcher"
path = "src/url_matcher/bin/main.rs"

[[bin]]
name = "gui_library"
path = "src/gui_library/bin/main.rs"

[[bin]]
name = "polygon"
path = "src/polygon/bin/main.rs"

[[bin]]
name = "ffi_wrapper"
path = "src/ffi_wrapper/bin/main.rs"

[[bin]]
name = "dining_philosophers"
path = "src/dining_philosophers/bin/main.rs"

[[bin]]
name = "link_checkers"
path = "src/link_checkers/bin/main.rs"

[[bin]]
name = "dining_philosophers_async"
path = "src/dining_philosophers_async/bin/main.rs"
